--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 dist/
 # generated types
 .astro/
+*.tsbuildinfo
 
 # dependencies
 node_modules/
@@ -16,6 +17,7 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.production
+.env.*
 
 # macOS-specific files
 .DS_Store
