--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "shaky-spectrum",
+  "name": "astro-blog",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.11.0"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.5.12",
+    "contentful": "^10.8.4",
+    "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
